replace clazz.newInstance(), deprecated since Java 9
use clazz.getDeclaredConstructor().newInstance() instead

Change-Id: I276e446b227d7f9cb85c9716c2fc7c5ca9d91d22